--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,228 @@
-spotipy
-pandas 
-numpy
-sklearn
-dotenv
-psycopg2
-flask
-flask_cors
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+asgiref==3.7.2
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==23.2.0
+audioread==3.0.1
+backoff==2.2.1
+beautifulsoup4==4.12.3
+Brotli==1.0.9
+cachetools==5.3.3
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+ChatterBot==1.0.4
+chatterbot-corpus==1.2.0
+click==8.1.3
+colorama==0.4.6
+colour==0.1.5
+ConfigArgParse==1.5.3
+contourpy==1.1.0
+cycler==0.11.0
+Cython==0.29.35
+dacite==1.8.1
+dash==2.10.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+diff-match-patch==20230430
+distro==1.9.0
+Django==3.2.15
+django-extensions==3.2.3
+django-filter==23.2
+django-import-export==3.2.0
+django-maintenance-mode==0.18.0
+django-picklefield==3.1
+django-rest-framework==0.1.0
+django-simple-history==3.3.0
+djangorestframework==3.14.0
+et-xmlfile==1.1.0
+executing==2.0.1
+fastapi==0.103.2
+Flask==2.1.3
+Flask-BasicAuth==0.2.0
+Flask-Cors==4.0.1
+flatbuffers==24.3.25
+fonttools==4.40.0
+frozenlist==1.4.1
+gast==0.5.4
+genai==2.1.0
+gevent==22.10.2
+geventhttpclient==2.0.9
+google-ai-generativelanguage==0.6.2
+google-api-core==2.19.0
+google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.2
+google-pasta==0.2.0
+googleapis-common-protos==1.59.1
+greenlet==2.0.2
+grpcio==1.63.0
+grpcio-status==1.62.2
+gunicorn==20.1.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+idna==3.4
+importlib-metadata==6.0.1
+iniconfig==2.0.0
+ipython==8.24.0
+itsdangerous==2.1.2
+jaconv==0.3.4
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.4.2
+keras==3.3.3
+kiwisolver==1.4.4
+klearn==0.0.3
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.10.2.post1
+llvmlite==0.43.0
+locust==2.15.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupPy==1.14
+MarkupSafe==2.1.3
+mathparse==0.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+msgpack==1.0.5
+multidict==6.0.5
+mutagen==1.47.0
+namex==0.0.8
+nltk==3.8.1
+numba==0.60.0
+numpy==1.25.0
+odfpy==1.4.1
+openai==0.27.10
+openpyxl==3.1.2
+opentelemetry-api==1.18.0
+opentelemetry-distro==0.39b0
+opentelemetry-exporter-otlp-proto-common==1.18.0
+opentelemetry-exporter-otlp-proto-http==1.18.0
+opentelemetry-instrumentation==0.39b0
+opentelemetry-proto==1.18.0
+opentelemetry-sdk==1.18.0
+opentelemetry-semantic-conventions==0.39b0
+opt-einsum==3.3.0
+optree==0.11.0
+outcome==1.3.0.post0
+packaging==23.1
+pandas==2.0.2
+parso==0.8.4
+patsy==0.5.3
+Pillow==9.5.0
+Pint==0.23
+platformdirs==4.2.2
+playwright==1.37.0
+plotly==5.15.0
+pluggy==1.3.0
+pooch==1.8.2
+prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.23.3
+psutil==5.9.5
+psycopg2==2.9.6
+pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.21
+pycryptodomex==3.20.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pyee==9.0.4
+pygame==2.5.2
+Pygments==2.17.2
+pykakasi==2.3.0
+pymongo==3.13.0
+pyparsing==3.1.0
+PySocks==1.7.1
+pytest==7.4.4
+pytest-base-url==2.0.0
+pytest-playwright==0.4.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-fsutil==0.10.0
+python-gettext==5.0
+python-slugify==8.0.4
+pytube==15.0.0
+pytz==2023.3
+pywin32==306
+PyYAML==3.13
+pyzmq==25.1.0
+rapidfuzz==3.9.4
+redis==5.0.7
+regex==2024.4.28
+requests==2.32.3
+rich==13.7.1
+roundrobin==0.0.4
+rsa==4.9
+scikit-learn==1.5.1
+scipy==1.10.1
+selenium==4.16.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soundcloud-v2==1.5.1
+soundfile==0.12.1
+soupsieve==2.4.1
+soxr==0.3.7
+spotdl==4.2.5
+spotipy==2.24.0
+SQLAlchemy==1.2.19
+sqlparse==0.4.4
+stack-data==0.6.3
+starlette==0.27.0
+statsmodels==0.14.0
+syncedlyrics==0.7.0
+tablib==3.5.0
+tabulate==0.9.0
+tenacity==8.2.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tiktoken==0.3.3
+tqdm==4.66.4
+traitlets==5.14.3
+trio==0.24.0
+trio-websocket==0.11.1
+twitter==1.19.6
+typing_extensions==4.11.0
+tzdata==2023.3
+Unidecode==1.3.8
+uritemplate==4.1.1
+urllib3==2.0.3
+uvicorn==0.23.2
+wcwidth==0.2.13
+websockets==12.0
+Werkzeug==2.0.0
+whitenoise==6.5.0
+wrapt==1.15.0
+wsproto==1.2.0
+xlrd==2.0.1
+xlwt==1.3.0
+yarl==1.9.4
+youtube-dl==2021.12.17
+yt-dlp==2024.7.7
+ytmusicapi==1.7.4
+zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0
